changes made to about me and fixed nav bar spacing

--- a/src/components/Navigation/Navbar.css
+++ b/src/components/Navigation/Navbar.css
@@ -12,3 +12,7 @@
   cursor: pointer;
 }
 
+.nav_item {
+  margin: 20px;
+  text-decoration-line: none;
+}
