--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -3,14 +3,20 @@
   font-size: 50px; 
 }
 
+.bio {
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 50px;
+  padding-left: 400px;
+  padding-right: 400px;
+  margin-bottom: 100px;
+}
+
 .profile_pic{
   border-radius: 100%;
   width: 400px;
   height: 400px;
   object-fit: cover;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
   transition: transform 0.2s; 
   opacity: 0.9;
 }
